--- a/temples.html
+++ b/temples.html
@@ -61,11 +61,11 @@
         <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/Rome-Italy-Temple.jpeg" alt="Rome Italy Temple">
+        <img src="images/Rome-Italy-Temple.jpg" alt="Rome Italy Temple">
         <figcaption>Rome Italy Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/Paris-France-Temple.jpeg" alt="Paris France Temple">
+        <img src="images/Paris-France-Temple.jpg" alt="Paris France Temple">
         <figcaption>Paris France Temple</figcaption>
       </figure>
       <figure>
@@ -73,11 +73,11 @@
         <figcaption>Lagos Nigeria Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/The-Sydney-Australia-LDS-temple.jpeg" alt="Sydney Australia Temple">
+        <img src="images/The-Sydney-Australia-Temple.jpg" alt="Sydney Australia Temple">
         <figcaption>Sydney Australia Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/Kiev-Temple.jpeg" alt="Kyiv Ukraine Temple">
+        <img src="images/Kiev-Temple.jpg" alt="Kyiv Ukraine Temple">
         <figcaption>Kyiv Ukraine Temple</figcaption>
       </figure>
     </section>
