--- a/temples.html
+++ b/temples.html
@@ -43,6 +43,7 @@
 
     
     <h2>Temple Gallery</h2>
+  <h2>Temple Gallery</h2>
     <section class="gallery">
       <figure>
         <img src="images/Aba-Nigeria-Temple.jpg" alt="San Diego California Temple">
@@ -77,7 +78,7 @@
         <figcaption>Sydney Australia Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/Kiev-Temple.jpg" alt="Kyiv Ukraine Temple">
+        <img src="images/Kiev-Temple.jpeg" alt="Kyiv Ukraine Temple">
         <figcaption>Kyiv Ukraine Temple</figcaption>
       </figure>
     </section>
