--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -7,7 +7,7 @@
     <title>Temple Album</title>
     <meta name="description" content="Temple Album">
     <meta name="keywords" content="Temple Album, Aba Nigeria Temple">
-    <meta name="author" content="Olowo Elisha Ibukun">
+    <meta name="author" content="Olowo Ibukun">
     <!-- Preconnect to improve loading performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     </noscript>
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
-    <script src="styles/scripts/filtered-temples.js"></script>
+   <script src="scripts/filtered-temples.js"></script>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         </div>
     </main>
      <footer>
-        <p>&copy;<span id="currentyear"></span> Olowo Elisha Ibukun 🩺 Nigeria</p>
+        <p>&copy;<span id="currentyear"></span> Olowo Ibukun Elisha 🩺 Nigeria</p>
         <p id="lastModified"></p>
     </footer>
 
