--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Form</title>
-    <meta name="description" content="Product Review Form">
+    <meta name="description" content="Product Review Form – Share Honest Thoughts & Ratings">
     <meta name="keywords" content="Product Review Form">
     <meta name="author" content="Olowo Ibukun Elisha">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="styles/form-large.css">
     <script src="scripts/form.js" defer></script>
 </head>
-
 <body>
     <header>
         <h1 class="nameHeader">Product Review</h1>
