--- a/project/contact.html
+++ b/project/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Contact Ibukun Olowo Elisha about projects or collaboration.">
-  <meta name="author" content="Ibukun Olowo Elisha">
+  <meta name="description" content="Contact Olowo Ibukun Elisha about projects or collaboration.">
+  <meta name="author" content="Olowo Ibukun Elisha">
   <title>ElectroTech by Elisha | Contact</title>
 
   <link rel="stylesheet" href="styles/project.css">
